<resources>
    <string name="site_utfpr" translatable="false">www.utfpr.edu.br</string>
    <string name="email_autor" translatable="false"><u>renatavasconcelos@alunos.utfpr.edu.br</u></string>
    <string name="app_name">"Hydrated "</string>
    <string name="nome">Name</string>
    <string name="peso">Weight</string>
    <string name="cadastrar">Register</string>
    <string name="nome_completo">Full name</string>
    <string name="peso_atual">Current weight</string>
    <string name="usuario_cadastrado">"Registered user! "</string>
    <string name="faltou_entrar_com_o_nome">You forgot to enter your name!</string>
    <string name="faltou_colocar_o_peso_atual">You forgot to enter the current weight!</string>
    <string name="limpar">Clear</string>
    <string name="nome_valor">Name:</string>
    <string name="peso_valor">"Weight: "</string>
    <string name="peso_deve_ser_um_numero_inteiro">Weight must be a whole number!</string>
    <string name="as_entradas_foram_apagadas">Entries have been deleted!</string>
    <string name="sugestao_meta">Goal Suggestion</string>
    <string name="nao_quer_sugestao_de_meta">No goal suggestion wanted!</string>
    <string name="feminino">Feminine</string>
    <string name="masculino">Masculine</string>
    <string name="faltou_preencher_o_genero">I forgot to fill in the gender!</string>
    <string name="genero_usado">Gender:</string>
    <string name="tipo">Type:</string>
    <string name="textGenero">Gender:</string>
    <string name="ml" translatable="false">ml</string>
    <string name="litros" translatable="false">L</string>
    <string name="faltou_exibir_o_tipo">The type was missing!</string>
    <string name="tipo_valor">"Type: "</string>
    <string name="logo_agua">As soon as it\'s a glass of water</string>
    <string name="descricao">Application for personal control of water intake for the Java Development for Mobile Devices course at UTFPR</string>
    <string name="autoria">"Author: <a href="https://github.com/RenataVasconcelos">Renata Ingryd Alves de Vasconcelos</a> "</string>
    <string name="sobre">About</string>
    <string name="controle_de_pessoas">People Control</string>
    <string name="adicionar">Add</string>
    <string name="novo_cadastro">New Registration</string>
    <string name="nenhum_aplicativo_para_abrir_paginas_web">No apps to open web pages!</string>
    <string name="nenhum_aplicativo_para_enviar_um_email">No app to send an email!</string>
    <string name="contato_pelo_aplicativo">Contact via App</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="editar_pessoa">Edit Person</string>
    <string name="sugerir_tipo">Suggest Type</string>
    <string name="ordenacao">Ordering</string>
    <string name="restaurar_padroes">Restore Defaults</string>
    <string name="as_configuracoes_voltaram_para_o_padrao_de_instalacao">Settings reverted to installation default!</string>
    <string name="peso_deve_ser_maior_que_0">Weight must be greater than 0!</string>
    <string name="aviso">Warning</string>
    <string name="ok" translatable="false">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">YES</string>
    <string name="nao">NO</string>
    <string name="deseja_apagar">Do you want do delete?\n\"</string>
    <string name="deseja_voltar_padroes">Do you want do restore defaults?</string>
    <string name="desfazer">Undo</string>
    <string name="alteracao_realizada">Data update done!</string>
    <string name="erro_de_conversao_de_tipos">Type conversion error!</string>
    <string name="erro_ao_tentar_inserir">Error trying to insert!</string>
    <string name="erro_ao_tentar_alterar">Error trying to update!</string>
    <string name="erro_ao_tentar_excluir">Error trying do delete!</string>
</resources>